[package]
name = "vector"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.11"
glutin = { version = "0.29", default-features = false, features = ["wayland"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }

[profile.release]
strip = true
lto = true
panic = "abort"
